--- a/localgpt_llama2/Dockerfile
+++ b/localgpt_llama2/Dockerfile
@@ -1,21 +1,44 @@
-# syntax=docker/dockerfile:1
+# syntax=docker/dockerfile:1 old version please don't use this anymore.
 # Build as `docker build . -t localgpt`, requires BuildKit.
 # Run as `docker run -it --mount src="$HOME/.cache",target=/root/.cache,type=bind --gpus=all localgpt`, requires Nvidia container toolkit.
 
-FROM nvidia/cuda:11.7.1-runtime-ubuntu22.04
-RUN apt-get update && apt-get install -y software-properties-common
-RUN apt-get install -y g++-11 make python3 python-is-python3 pip
-# only copy what's needed at every step to optimize layer cache
-COPY ./requirements.txt .
-# use BuildKit cache mount to drastically reduce redownloading from pip on repeated builds
-RUN --mount=type=cache,target=/root/.cache CMAKE_ARGS="-DLLAMA_CUBLAS=on" FORCE_CMAKE=1 pip install --timeout 100 -r requirements.txt llama-cpp-python==0.1.83
+FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04
+
+# Cài đặt các công cụ cần thiết
+RUN apt-get update && apt-get install -y \
+    software-properties-common \
+    g++-11 make python3.10 python3.10-dev python3-pip\
+    apt-utils
+
+# Cập nhật pip
+RUN python3.10 -m pip install --upgrade pip
+
+# Cài đặt PyTorch với phiên bản cụ thể
+RUN pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118
+
+# Copy và cài đặt requirements
+COPY requirements.txt .
+RUN --mount=type=cache,target=/root/.cache pip install --timeout 100 -r requirements.txt --index-url https://pypi.org/simple
+RUN pip install "autoawq==0.1.5"
+RUN pip install "git+https://github.com/PanQiWei/AutoGPTQ.git@v0.7.1"
+
+# Kiểm tra cài đặt CUDA
+RUN python3.10 -c "import torch; print(torch.cuda.is_available())"
+
+# Copy các file liên quan đến ingest.py
+COPY ingest.py .
 COPY SOURCE_DOCUMENTS ./SOURCE_DOCUMENTS
-COPY ingest.py constants.py ./
-# Docker BuildKit does not support GPU during *docker build* time right now, only during *docker run*.
-# See <https://github.com/moby/buildkit/issues/1436>.
-# If this changes in the future you can `docker build --build-arg device_type=cuda  . -t localgpt` (+GPU argument to be determined).
-ARG device_type=cpu
-RUN --mount=type=cache,target=/root/.cache python ingest.py --device_type $device_type
+
+# Chạy ingest.py
+RUN python3.10 ingest.py --device_type cuda
+
+# Copy mã nguồn
 COPY . .
-ENV device_type=cuda
-CMD python run_localGPT.py --device_type $device_type
+
+# Thiết lập môi trường
+ARG device_type=cuda
+ENV device_type=${device_type}
+
+# Chạy ứng dụng
+CMD python3.10 run_localGPT.py --device_type ${device_type}
+
