--- a/localgpt_llama2/Dockerfile
+++ b/localgpt_llama2/Dockerfile
@@ -1,44 +1,48 @@
-# syntax=docker/dockerfile:1 old version please don't use this anymore.
-# Build as `docker build . -t localgpt`, requires BuildKit.
-# Run as `docker run -it --mount src="$HOME/.cache",target=/root/.cache,type=bind --gpus=all localgpt`, requires Nvidia container toolkit.
-
-FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04
+# syntax=docker/dockerfile:1.4
+FROM nvidia/cuda:11.8.0-devel-ubuntu22.04
 
 # Cài đặt các công cụ cần thiết
 RUN apt-get update && apt-get install -y \
     software-properties-common \
-    g++-11 make python3.10 python3.10-dev python3-pip\
-    apt-utils
+    g++-9 gcc-9 make python3.10 python3.10-dev python3-pip git ninja-build \
+    libcudnn8 libcudnn8-dev apt-utils build-essential && \
+    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 60 && \
+    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 60 && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Cập nhật pip
 RUN python3.10 -m pip install --upgrade pip
 
-# Cài đặt PyTorch với phiên bản cụ thể
-RUN pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118
+# Thêm biến môi trường cho CUDA và kích hoạt CUDA extensions
+ENV CUDA_HOME=/usr/local/cuda
+ENV PATH=/usr/local/cuda/bin:$PATH
+ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
+ENV TORCH_CUDA_ARCH_LIST="8.6"
+ENV CUDA_EXT=1
 
-# Copy và cài đặt requirements
+# Cài đặt và xử lý lỗi liên quan đến gói blinker
+RUN apt-get remove --purge python3-blinker -y || true
+RUN pip install --ignore-installed blinker
+
+# Cài đặt PyTorch với CUDA 11.8
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118
+
+# Biên dịch và cài đặt auto-gptq với cache
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install "git+https://github.com/PanQiWei/AutoGPTQ.git@v0.7.1"
+
+# Copy và cài đặt requirements với cache
 COPY requirements.txt .
-RUN --mount=type=cache,target=/root/.cache pip install --timeout 100 -r requirements.txt --index-url https://pypi.org/simple
-RUN pip install "autoawq==0.1.5"
-RUN pip install "git+https://github.com/PanQiWei/AutoGPTQ.git@v0.7.1"
-
-# Kiểm tra cài đặt CUDA
-RUN python3.10 -c "import torch; print(torch.cuda.is_available())"
-
-# Copy các file liên quan đến ingest.py
-COPY ingest.py .
-COPY SOURCE_DOCUMENTS ./SOURCE_DOCUMENTS
-
-# Chạy ingest.py
-RUN python3.10 ingest.py --device_type cuda
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r requirements.txt --timeout 100
 
 # Copy mã nguồn
 COPY . .
 
-# Thiết lập môi trường
-ARG device_type=cuda
-ENV device_type=${device_type}
+# Run the app
+ENTRYPOINT ["python3.10"]
+CMD ["run_localGPT.py", "--device_type",  "cuda"]
 
-# Chạy ứng dụng
-CMD python3.10 run_localGPT.py --device_type ${device_type}
+
 
