--- a/localgpt_llama2/requirements.txt
+++ b/localgpt_llama2/requirements.txt
@@ -26,37 +26,26 @@
 langchain==0.0.267
 chromadb==0.4.6
 pdfminer.six==20221105
-InstructorEmbedding
+InstructorEmbedding==1.0.1
 sentence-transformers==2.2.2
-faiss-cpu
-huggingface_hub
-transformers
-# autoawq; sys_platform != 'darwin'
-protobuf==3.20.2; sys_platform != 'darwin'
-protobuf==3.20.2; sys_platform == 'darwin' and platform_machine != 'arm64'
-protobuf==3.20.3; sys_platform == 'darwin' and platform_machine == 'arm64'
-# auto-gptq==0.6.0; sys_platform != 'darwin'
-docx2txt
-unstructured
-unstructured[pdf]
+faiss-cpu==1.8.0.post1
+huggingface_hub==0.25.1
+transformers==4.45.1
 
 # Utilities
 urllib3==1.26.6
-accelerate
+accelerate==0.34.2
 bitsandbytes ; sys_platform != 'win32'
-bitsandbytes-windows ; sys_platform == 'win32'
-click
-flask
-requests
-numpy
+bitsandbytes-windows==0.37.5 ; sys_platform == 'win32'
+click==8.1.7
+flask==3.0.3
+requests==2.32.3
+numpy==1.26.4
+
 # Streamlit related
-streamlit
-streamlit-extras
+streamlit==1.38.0
+streamlit-extras==0.0.9
 
 # Excel File Manipulation
-openpyxl
+openpyxl==3.1.5
 
-# Machine Learning Frameworks
-nltk
-scikit-learn
-sacrebleu
