--- a/requirements.txt
+++ b/requirements.txt
@@ -18,38 +18,37 @@
 
 #pip install autoawq==0.1.5
 
+#pip install "git+https://github.com/PanQiWei/AutoGPTQ.git@v0.7.1"
+
 #pip install "git+https://github.com/PanQiWei/AutoGPTQ.git@v0.4.2"
 
 # Natural Language Processing
 langchain==0.0.267
 chromadb==0.4.6
 pdfminer.six==20221105
-InstructorEmbedding
+InstructorEmbedding==1.0.1
 sentence-transformers==2.2.2
-faiss-cpu
-huggingface_hub
-transformers
-# autoawq; sys_platform != 'darwin'
-protobuf==3.20.2; sys_platform != 'darwin'
-protobuf==3.20.2; sys_platform == 'darwin' and platform_machine != 'arm64'
-protobuf==3.20.3; sys_platform == 'darwin' and platform_machine == 'arm64'
-# auto-gptq==0.6.0; sys_platform != 'darwin'
-docx2txt
-unstructured
-unstructured[pdf]
-
+faiss-cpu==1.8.0.post1
+huggingface_hub==0.25.1
+transformers==4.45.1
+unstructured==0.11.2
+pikepdf==9.3.0
+pypdf==5.0.1
+unstructured-inference==0.7.15
+unstructured.pytesseract==0.3.13
 # Utilities
 urllib3==1.26.6
-accelerate
+accelerate==0.34.2
 bitsandbytes ; sys_platform != 'win32'
-bitsandbytes-windows ; sys_platform == 'win32'
-click
-flask
-requests
-numpy
+bitsandbytes-windows==0.37.5 ; sys_platform == 'win32'
+click==8.1.7
+flask==3.0.3
+requests==2.32.3
+numpy==1.26.4
+
 # Streamlit related
-streamlit
-streamlit-extras
+streamlit==1.38.0
+streamlit-extras==0.0.9
 
 # Excel File Manipulation
-openpyxl
+openpyxl==3.1.5
