--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,13 @@ services:
       - "8501:8501"
 
     volumes:
-      - .:/app                             # Mount toàn bộ thư mục hiện tại vào /app
-      - ./model_cache:/root/.cache         # Mount cache để lưu mô hình bên ngoài
-
-    working_dir: /app                      # Thiết lập thư mục làm việc là /app
+      - ./localGPT_UI.py:/app/localGPT_UI.py
+      - ~/.cache:/root/.cache
+      - ./SOURCE_DOCUMENTS:/app/SOURCE_DOCUMENTS
+      - ./localGPT_app:/app/localGPT_app
+      - ./config:/app/config
+      - ./DB:/app/DB
+    working_dir: /app                               # Thiết lập thư mục làm việc là /app
 
     environment:
       - STREAMLIT_SERVER_RUN_ON_SAVE=false
